<resources>
    <string name="app_name">mathquiz</string>
    <string name="action_settings">Settings</string>
    <string name="truebutton">True</string>

    <string name="falsebutton">False</string>
    <string name="nextbutton">NEXT</string>
    <string name="question1">Is 149 a prime no</string>
    <string name="question2">Is 127 a prime no</string>
    <string name="question3">Is 161 a prime no</string>
    <string name="question4">Is 195 a prime no</string>
    <string name="correcttoast">correct</string>
    <string name="incorrecttoast">incorrect</string>
    <string name="cheattoast">you have cheated!!</string>
    <string name="cheatbutton">cheat</string>
    <string name="hint">hint</string>
    <string name="cheatwarningtext">u r about to cheat</string>
    <string name="showcheatbutton">showcheat</string>
    <string name="cheat">cheat</string>
    <string name="hinttext">u r about to get a hint</string>
    <string name="showhintbutton">SHOW HINT</string>
    <string name="hintbutton">HINT</string>
    <string name="yourhint">SEE IF IT CAN BE FACTORISED</string>


</resources>
