<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/math"
    android:alpha=".9"

    android:weightSum="1">

    <Switch
        android:id="@+id/switch_looping"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="looping"
        android:layout_weight="0.09" />

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:text="pause"
        android:layout_weight="0.04" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_gravity="top"
        android:layout_height="wrap_content"
        android:text="play" />


</LinearLayout>





    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="30dp"

        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/truebutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/up"
            android:text="@string/truebutton" />


        <Button
            android:id="@+id/falsebutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/down"

            android:text="@string/falsebutton" />



    </LinearLayout>

    <Button
        android:id="@+id/nextbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextbutton" />
    <Button
        android:id="@+id/cheatbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/cheatbutton" />
    <Button
        android:id="@+id/hintbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hintbutton" />





</LinearLayout>
